--- a/src/app/usit/components/email-configuration/email-configuration.component.html
+++ b/src/app/usit/components/email-configuration/email-configuration.component.html
@@ -179,13 +179,13 @@
           </ng-container>
 
           <!-- Password Column-->
-          <ng-container matColumnDef="Password">
+          <!-- <ng-container matColumnDef="Password">
             <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Password">
               Password</th>
             <td mat-cell *matCellDef="let element">
               {{ element?.password }}
             </td>
-          </ng-container>
+          </ng-container> -->
 
           <!-- Received Date Column-->
           <ng-container matColumnDef="ReceivedDate">
@@ -207,7 +207,7 @@
             </th>
             <td mat-cell *matCellDef="let element" style="width: 10% !important;">
               <button mat-raised-button color="warn" style="width: max-content; height: max-content"
-                (click)="stopExtraction(element.email)" [disabled]="element.status === 'No active emails processing / Completed'">
+                (click)="stopExtraction(element.id)" [disabled]="element.status === 'No active emails processing / Completed'">
                 Stop
               </button>
             </td>
