--- a/src/app/usit/components/reports/taggedcount-report/taggedcount-report.component.html
+++ b/src/app/usit/components/reports/taggedcount-report/taggedcount-report.component.html
@@ -53,7 +53,7 @@
                 <button mat-raised-button color="warn" (click)="reset()">Reset</button
                 >
     
-                 <button *ngIf="showReport" mat-raised-button style="background-color: #4CAF50; color: white;"
+                 <button *ngIf="showReport && privilegeServ.hasPrivilege('COMMENTS_REPORT_DATA')" mat-raised-button style="background-color: #4CAF50; color: white;"
                 (click)="excelImport()">Excel Export</button>   
 
               </mat-card-content>
