--- a/src/app/usit/components/email-configuration/email-configuration.component.html
+++ b/src/app/usit/components/email-configuration/email-configuration.component.html
@@ -200,30 +200,30 @@
             </td>
           </ng-container>
 
-          <!-- Stop Extraction Column -->
-          <ng-container matColumnDef="StopExtraction">
-            <th mat-header-cell *matHeaderCellDef style="width: 10% !important;" nowrap>
-              Stop Extraction
-            </th>
-            <td mat-cell *matCellDef="let element" style="width: 10% !important;">
-              <button mat-raised-button color="warn" style="width: max-content; height: max-content"
-                (click)="stopExtraction(element.id)" [disabled]="element.status === 'No active emails processing / Completed'">
-                Stop
-              </button>
-            </td>
-          </ng-container>
-
-          <!-- Status Column -->
-          <ng-container matColumnDef="Status">
-            <th mat-header-cell *matHeaderCellDef> Status </th>
-            <td mat-cell *matCellDef="let element"
-            [ngClass]="{
-              'status-in-progress': element.status === 'In Progress - Emails are processing !',
-              'status-completed': element.status === 'No active emails processing / Completed'
-            }">
-              {{ element?.status || 'N/A' }}
-            </td>
-          </ng-container>
+                <!-- Stop Extraction Column -->
+                <ng-container matColumnDef="StopExtraction">
+                  <th mat-header-cell *matHeaderCellDef style="width: 10% !important;" nowrap>
+                    Stop Extraction
+                  </th>
+                  <td mat-cell *matCellDef="let element" style="width: 10% !important;">
+                    <button mat-raised-button color="warn" style="width: max-content; height: max-content"
+                      (click)="stopExtraction(element.id)" [disabled]="element.status !== 'IN PROGRESS'">
+                      Stop
+                    </button>
+                  </td>
+                </ng-container>
+      
+                <!-- Status Column -->
+                <ng-container matColumnDef="Status">
+                  <th mat-header-cell *matHeaderCellDef> Status </th>
+                  <td mat-cell *matCellDef="let element"
+                  [ngClass]="{
+                    'status-in-progress': element.status === 'IN PROGRESS',
+                    'status-completed': element.status !== 'IN PROGRESS'
+                  }">
+                    {{ element?.status || 'N/A' }}
+                  </td>
+                </ng-container>
 
           <!-- Action Column-->
           <ng-container matColumnDef="Action">
