--- a/src/app/dialogs/un-blocking-emails/un-blocking-emails.component.scss
+++ b/src/app/dialogs/un-blocking-emails/un-blocking-emails.component.scss
@@ -63,3 +63,14 @@
     background-color: #f5f5f5;
   }
      
+  .header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #e1e3ef;
+    padding: 16px;
+    font-size: 20px;
+    font-weight: bold;
+    border-bottom: 1px solid #dcdde3;
+    height: 20px;
+}
