Email extraction reload page update

--- a/src/app/usit/components/email-configuration/email-configuration.component.scss
+++ b/src/app/usit/components/email-configuration/email-configuration.component.scss
@@ -209,6 +209,11 @@ tbody {
   font-weight: bold;
 }
 
+.status-in-progr{
+  color: green;
+  font-weight: bold;
+}
+
 .status-completed {
   color: red;
   font-weight: 400;
