--- a/src/app/usit/components/email-configuration/email-configuration.component.html
+++ b/src/app/usit/components/email-configuration/email-configuration.component.html
@@ -194,7 +194,7 @@
               Extraxt Emails </th>
             <td mat-cell *matCellDef="let element" style=" width: 10% !important;">
               <button mat-raised-button color="primary" style="width: max-content; height: max-content"
-                (click)="extractEmails(element)" [disabled]="element.status === 'In Progress - Emails are processing !'">
+                (click)="extractEmails(element)" [disabled]="element.status === 'IN PROGRESS'">
                 Extract
               </button>
             </td>
@@ -218,8 +218,8 @@
                   <th mat-header-cell *matHeaderCellDef> Status </th>
                   <td mat-cell *matCellDef="let element"
                   [ngClass]="{
-                    'status-in-progress': element.status === 'IN PROGRESS',
-                    'status-completed': element.status !== 'IN PROGRESS'
+                    'status-in-progress': element.status === 'IN PROGRESS' || element.status === 'COMPLETED',
+                    'status-completed': element.status !== 'IN PROGRESS' && element.status !== 'COMPLETED'
                   }">
                     {{ element?.status || 'N/A' }}
                   </td>
