--- a/src/app/usit/components/sales/hot-list/hot-list.component.html
+++ b/src/app/usit/components/sales/hot-list/hot-list.component.html
@@ -13,7 +13,7 @@
 
         <form [formGroup]="myForm">
             <div class="hot-list-actions">
-                <div class="form-container">
+                <!-- <div class="form-container">
                     <mat-form-field appearance="fill" style="width: 8rem;margin-left:6rem;">
                         <mat-label class="bold-label">Visa</mat-label>
                         <mat-select formControlName="visa" (selectionChange)="onExperienceChange($event)">
@@ -22,32 +22,32 @@
                             </mat-option>
                         </mat-select>
                     </mat-form-field>
-                </div>
-                <div>
+                </div> -->
+                <!-- <div>
                     <mat-form-field appearance="fill" style="margin-top:1rem;margin-right: 3rem; width:8rem;">
                         <mat-label class="bold-label">Priority</mat-label>
-                        <!--<mat-select formControlName="priority"(selectionChange)="onPriority($event.value)">-->
+                        <mat-select formControlName="priority"(selectionChange)="onPriority($event.value)">
                         <mat-select formControlName="priority" (selectionChange)="onExperienceChange($event)">
                             <mat-option *ngFor="let option of PRIORITY" [value]="option.code">
                                 {{option.code}}
                             </mat-option>
                         </mat-select>
                     </mat-form-field>
-                </div>
-                <div>
+                </div> -->
+                <!-- <div>
                     <mat-form-field appearance="fill" style="margin-top: 1rem;margin-right:25rem;width: 12rem;">
                         <mat-label class="bold-label">Experience</mat-label>
                         <mat-select formControlName="experience" (selectionChange)="onExperienceChange($event)">
                             <mat-option *ngFor="let exp of experiences" [value]="exp">{{ exp }}</mat-option>
                         </mat-select>
                     </mat-form-field>
-                </div>
-                <button type="button" mat-raised-button color="primary" (click)="refreshForm()">Refresh</button>
+                </div> -->
+                <!-- <button type="button" mat-raised-button color="primary" (click)="refreshForm()">Refresh</button> -->
                 <button *ngIf="showReport" class="search" mat-raised-button color="primary"
                     (click)="handleExport()">Excel
                     Import</button>
                 <div class="search-hot-list">
-                    <input matInput type="text" class="search" placeholder="search Hot List" (keyup)="onFilter($event)">
+                    <input matInput type="text" class="search" placeholder="search Hot List" (keyup)="onFilter($event)" (keydown.enter)="$event.preventDefault()">
                 </div>
             </div>
         </form>
