--- a/src/app/docsync/all-files/upload-documents/upload-documents.component.html
+++ b/src/app/docsync/all-files/upload-documents/upload-documents.component.html
@@ -34,5 +34,5 @@
 <!-- form-bottom action buttons -->
 <div class="form-action-buttons">
     <button mat-raised-button class="btn-cancel" color="white" (click)="closeDialog()">Cancel</button>
-    <button mat-raised-button color="primary" [disabled]="isFormSubmitted" (click)="onSubmit()">Submit</button>
+    <button mat-raised-button color="primary" [disabled]="isFormSubmitted" (click)="onSubmit()">Upload</button>
 </div>
