--- a/src/app/docsync/all-files/all-files.component.html
+++ b/src/app/docsync/all-files/all-files.component.html
@@ -1,88 +1,173 @@
 <div class="hot-list-container">
-    <div class="header-container mat-elevation-z1">
-        <span class="header-text">
-            Doc sync
-        </span>
-        <div class="hot-list-actions">
-            <button mat-icon-button color="primary" class="add-email" matToolTip="Add" (click)="addFolder()">
-                <!-- (click)="addEmail()" -->
-                <mat-icon class="item-icon">create_new_folder</mat-icon>
-            </button>
+  <div class="header-container mat-elevation-z1">
+    <span class="header-text">
+      Doc sync
+    </span>
+    <div class="hot-list-actions">
+      <button *ngIf="isOneSelected()" mat-icon-button color="primary" (click)="edit()" [matTooltip]="rename"
+      matTooltipPosition="above">
+        <mat-icon>drive_file_rename_outline</mat-icon>
+      </button>
+      <!-- <button *ngIf="showButtons" mat-icon-button color="primary" (click)="bulkDownload()" [matTooltip]="download"
+      matTooltipPosition="above">
+        <mat-icon>download</mat-icon>
+      </button> -->
+      <button *ngIf="showButtons" mat-icon-button color="primary" [matTooltip]="share"
+      matTooltipPosition="above" (click)="shareFileOrFolders()">
+        <mat-icon>share</mat-icon>
+      </button>
+      <button *ngIf="showButtons" mat-icon-button color="warn" (click)="bulkDelete()" [matTooltip]="delete"
+      matTooltipPosition="above">
+        <mat-icon>delete</mat-icon>
+      </button>
+      <button mat-icon-button color="primary" class="add-email" matToolTip="Add" (click)="addFolder()" [matTooltip]="newfolder"
+      matTooltipPosition="above">
+        <mat-icon class="item-icon">create_new_folder</mat-icon>
+      </button>
 
-            <button mat-icon-button color="primary" class="add-email" matToolTip="Add" (click)="uploadDocuments()">
-                <!-- (click)="addEmail()" -->
-                <mat-icon class="item-icon">upload_file</mat-icon>
-            </button>
+      <button mat-icon-button color="primary" class="add-email" matToolTip="Add" (click)="uploadDocuments()" [matTooltip]="upload"
+      matTooltipPosition="above">
+        <mat-icon class="item-icon">upload_file</mat-icon>
+      </button>
 
-            <div class="search-hot-list">
-                <input matInput type="text" class="search" placeholder="search">
-                <!-- (keyup)="applyFilter($event)" -->
-            </div>
-        </div>
-    </div>
-
-    <div id="table-container" class="table-wrapper">
-        <section class="mat-elevation-z8 hot-list-table-style">
-          <table mat-table [dataSource]="dataSource" matSort oncopy="return false">
-            <!-- (matSortChange)="onSort($event)" -->
-    
-            <!--- Note that these columns can be defined in any order.
-                            The actual rendered columns are set as a property on the row definition" -->
-    
-            <!-- SNo Column -->
-            <ng-container matColumnDef="SerialNum">
-              <th mat-header-cell *matHeaderCellDef style=" width: 1% ">
-                S.No </th>
-              <td mat-cell *matCellDef="let element" style=" width: 1% "> {{element?.serialNum}} </td>
-            </ng-container>
-    
-            <!-- Name Column -->
-            <ng-container matColumnDef="Name">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Name">
-                Name
-              </th>
-              <td mat-cell *matCellDef="let element">
-                 <span style="display: flex;">
-                  <mat-icon>folder</mat-icon>
-                {{element?.name ?? '-'}}
-                 </span>
-              </td>
-            </ng-container>
-    
-            <!-- Date Modified Column -->
-            <ng-container matColumnDef="DateModified">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by DateModified">
-                Date Modified
-              </th>
-              <td mat-cell *matCellDef="let element">
-                09-09-2024
-              </td>
-            </ng-container>
-    
-            <!-- Type Column-->
-            <ng-container matColumnDef="Type">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Type">
-                Type</th>
-              <td mat-cell *matCellDef="let element">
-                {{ element?.item_type }}
-              </td>
-            </ng-container>
-    
-            <!-- Size Column-->
-            <ng-container matColumnDef="Size">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Size"
-                style=" width: 10% !important;" nowrap>
-                Size </th>
-              <td mat-cell *matCellDef="let element" style=" width: 10% !important;">
-                256 Kb
-              </td>
-            </ng-container>
-    
-            <!-- table ROW -->
-            <tr mat-header-row *matHeaderRowDef="dataTableColumns; sticky: true"></tr>
-            <tr mat-row *matRowDef="let row; columns: dataTableColumns;"></tr>
-          </table>
-          <p class="no-data-found" *ngIf="!dataSource.data.length">{{'No matching data found'}}</p>
-        </section>
+      <div class="search-hot-list">
+        <input matInput type="text" class="search" placeholder="search">
+        <!-- (keyup)="applyFilter($event)" -->
       </div>
+    </div>
+  </div>
+
+  <!-- <div class="breadcrumb">
+    <a (click)="goToHome()">Home</a> &gt;
+    <ng-container *ngFor="let crumb of breadcrumbPaths; let i = index">
+      <ng-container *ngIf="i !== breadcrumbPaths.length - 1">
+        <a (click)="goToFolder(i)">{{ crumb.label }}</a> &gt;
+      </ng-container>
+      <ng-container *ngIf="i === breadcrumbPaths.length - 1">
+        <span>{{ crumb.label }}</span>
+      </ng-container>
+    </ng-container>
+    
+  </div> -->
+
+  <div class="breadcrumb">
+    <a (click)="goToHome()" class="breadcrumb-link">Root</a> &gt;
+    <ng-container *ngFor="let crumb of breadcrumbPaths; let i = index">
+      <ng-container *ngIf="i !== breadcrumbPaths.length - 1">
+        <a (click)="goToFolder(i)" class="breadcrumb-link">{{ crumb.label }}</a> &gt;
+      </ng-container>
+      <ng-container *ngIf="i === breadcrumbPaths.length - 1">
+        <span class="breadcrumb-active" style="color:rgb(32, 190, 116)">{{ crumb.label }}</span>
+      </ng-container>
+    </ng-container>
+  </div>
+  
+
+  <div id="table-container" class="table-wrapper">
+    <section class="mat-elevation-z8 hot-list-table-style">
+      <table mat-table [dataSource]="dataSource" matSort oncopy="return false">
+        <!-- (matSortChange)="onSort($event)" -->
+
+        <!--- Note that these columns can be defined in any order.
+                            The actual rendered columns are set as a property on the row definition" -->
+
+        <!-- Select Column-->
+        <ng-container matColumnDef="Select">
+          <th mat-header-cell *matHeaderCellDef style="width: 5%">
+            <mat-checkbox (change)="$event ? selectAll($event) : null" [checked]="isAllSelected()"
+              [indeterminate]="isIndeterminate()">
+            </mat-checkbox>
+          </th>
+          <td mat-cell *matCellDef="let element" style="width: 5%">
+            <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? toggleSelection(element) : null"
+              [checked]="selection.isSelected(element)">
+            </mat-checkbox>
+          </td>
+        </ng-container>
+
+        <!-- SNo Column -->
+        <!-- <ng-container matColumnDef="SerialNum">
+          <th mat-header-cell *matHeaderCellDef style=" width: 1% ">
+            S.No </th>
+          <td mat-cell *matCellDef="let element" style=" width: 1% "> {{element?.serialNum}} </td>
+        </ng-container> -->
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="Name">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Name">
+            Name
+          </th>
+          <td mat-cell *matCellDef="let element" style="cursor:pointer">
+            <span style="display: flex;" (click)="handleClick(element)">
+              <mat-icon 
+              [ngStyle]="{ color: getIcon(element.item_type) === 'folder' ? 'rgb(43, 43, 170)' : 'inherit' }">
+              {{ getIcon(element.item_type) }}
+            </mat-icon>            
+              {{element?.name ?? '-'}}
+            </span>
+          </td>
+        </ng-container>
+
+        <!-- Date Modified Column -->
+        <ng-container matColumnDef="DateModified">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by DateModified">
+            Date Modified
+          </th>
+          <td mat-cell *matCellDef="let element">
+            09-09-2024
+          </td>
+        </ng-container>
+
+        <!-- Type Column-->
+        <ng-container matColumnDef="Type">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Type">
+            Type</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element?.item_type }}
+          </td>
+        </ng-container>
+
+        <!-- Size Column-->
+        <ng-container matColumnDef="Size">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Size"
+            style=" width: 10% !important;" nowrap>
+            Size </th>
+          <td mat-cell *matCellDef="let element" style=" width: 10% !important;">
+            {{ element?.filesize }}
+          </td>
+        </ng-container>
+
+        <!-- Size Column-->
+        <ng-container matColumnDef="Extension">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Extension"
+            style=" width: 10% !important;" nowrap>
+            Extension </th>
+          <td mat-cell *matCellDef="let element" style=" width: 10% !important;">
+            {{ element?.extension }}
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="View">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Extension"
+            style=" width: 10% !important;" nowrap>
+            Action </th>
+          <!-- <td mat-cell *matCellDef="let element" style=" width: 10% !important;">
+            {{ element?.extension }}
+          </td> -->
+          <td mat-cell *matCellDef="let element">
+            <button *ngIf="element.item_type === 'file'" mat-icon-button (click)="viewPDF(element.filedata,element.name)">
+              <mat-icon>visibility</mat-icon>
+            </button>
+            <span *ngIf="element.item_type !== 'file'">-</span>
+          </td>
+            
+        </ng-container>
+
+        <!-- table ROW -->
+        <tr mat-header-row *matHeaderRowDef="dataTableColumns; sticky: true"></tr>
+        <tr mat-row *matRowDef="let row; columns: dataTableColumns;"></tr>
+      </table>
+      <p class="no-data-found" *ngIf="!dataSource.data.length">{{'No matching data found'}}</p>
+    </section>
+  </div>
 </div>
