--- a/src/app/docsync/all-files/all-files.component.scss
+++ b/src/app/docsync/all-files/all-files.component.scss
@@ -1,351 +1,375 @@
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: calc(100vh - 68px);
-    background-color: #edebeb;
-  }
-  
-  mat-card {
-    width: 400px;
-    padding: 20px;
-    border: 1px solid #ccc;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  }
-  
-  .full-width {
-    width: 100%;
-  }
-  
-  .title {
-    text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: calc(100vh - 68px);
+  background-color: #edebeb;
+}
+
+mat-card {
+  width: 400px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
+
+.full-width {
+  width: 100%;
+}
+
+.title {
+  text-align: center;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.button-container {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 8px;
+}
+
+mat-list-item {
+  display: flex;
+  align-items: center;
+}
+
+mat-icon {
+  margin-right: 10px;
+}
+
+h4 {
+  margin: 0;
+  margin-right: 5px;
+}
+
+.mat-mdc-card-content:last-child {
+  padding-bottom: 0px !important;
+}
+
+.forgot-password {
+  text-align: right;
+  margin-top: 8px;
+
+  .forgot-password-link {
+    color: #3f51b5;
     font-weight: bold;
-    margin-bottom: 20px;
-  }
-  
-  .button-container {
-    display: flex;
-    justify-content: flex-end;
-    margin-top: 8px;
-  }
-  
-  mat-list-item {
-    display: flex;
-    align-items: center;
-  }
-  
-  mat-icon {
-    margin-right: 10px;
-  }
-  
-  h4 {
-    margin: 0;
-    margin-right: 5px;
-  }
-  
-  .mat-mdc-card-content:last-child {
-      padding-bottom: 0px !important;
-  }
-  
-  .forgot-password {
-    text-align: right;
-    margin-top: 8px;
-  
-    .forgot-password-link {
-      color: #3f51b5;
-      font-weight: bold;
-      text-decoration: none;
-      cursor: pointer;
-    }
-  }
-  
-  
-  .hot-list-container {
-    display: flex;
-    flex-direction: column;
-    height: calc(100vh - 68px);
-  }
-  
-  ul {
-    padding-inline-start: 10px;
-    background-color: rgb(228, 231, 234);
-    padding-top: 2px;
-    top: 0;
-  }
-  
-  ul.breadcrumb {
-    list-style: none;
-  }
-  
-  ul.breadcrumb li {
-    display: inline;
-  }
-  
-  ul.breadcrumb li + li:before {
-    color: black;
-    content: "/\00a0";
-  }
-  
-  ul.breadcrumb li a {
-    color: #0275d8;
     text-decoration: none;
     cursor: pointer;
   }
-  
-  ul.breadcrumb li a:hover {
-    color: #01447e;
-    text-decoration: underline;
+}
+
+
+.hot-list-container {
+  display: flex;
+  flex-direction: column;
+  height: calc(100vh - 68px);
+}
+
+ul {
+  padding-inline-start: 10px;
+  background-color: rgb(228, 231, 234);
+  padding-top: 2px;
+  top: 0;
+}
+
+ul.breadcrumb {
+  list-style: none;
+}
+
+ul.breadcrumb li {
+  display: inline;
+}
+
+ul.breadcrumb li+li:before {
+  color: black;
+  content: "/\00a0";
+}
+
+ul.breadcrumb li a {
+  color: #0275d8;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+ul.breadcrumb li a:hover {
+  color: #01447e;
+  text-decoration: underline;
+}
+
+.table-wrapper {
+  flex: 1;
+  overflow: auto;
+  width: 100%;
+}
+
+table {
+  width: 100%;
+}
+
+.mat-mdc-header-row {
+  background-color: rgb(213, 231, 231);
+  top: 0;
+}
+
+tbody {
+  text-align: left;
+}
+
+.mat-sort-header-arrow {
+  color: #1a1717;
+}
+
+.mat-mdc-column {
+  border-right: 1px solid currentColor;
+}
+
+.mat-column-Designation {
+  width: 32px;
+  border-right: 1px solid lightgray;
+  padding-right: 24px;
+}
+
+.mat-column-Name {
+  border-right: 1px solid lightgray;
+}
+
+.mat-column-Select,
+.mat-column-SerialNum,
+.mat-column-Name,
+.mat-column-DateModified,
+.mat-column-Type,
+.mat-column-Size {
+  border-right: 1px solid lightgray;
+}
+
+.header-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  height: 48px;
+  overflow: hidden;
+  background-color: rgb(228, 231, 234);
+}
+
+.header-text {
+  padding-left: 8px;
+  font-weight: 600;
+}
+
+.add-hot-list {
+  cursor: pointer;
+}
+
+.hot-list-actions {
+  display: flex;
+  align-items: center;
+  padding-right: 8px;
+
+  .search {
+    height: 32px;
+    padding: 0px 8px;
   }
-  
-  .table-wrapper {
-    flex: 1;
-    overflow: auto;
-    width: 100%;
+}
+
+.hot-list-table-style {
+  width: 100%;
+  overflow: auto;
+  display: block;
+}
+
+.mdc-data-table__cell,
+.mdc-data-table__header-cell {
+  padding: 0 4px 0 4px;
+}
+
+.mat-mdc-header-row {
+  z-index: 1000;
+}
+
+.no-data-found {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1rem;
+  margin-top: 64px;
+}
+
+.responsive-table {
+  width: 100%;
+}
+
+@media screen and (max-width: 768px) {
+  .responsive-table {
+    table-layout: auto;
   }
-  
-  table {
-    width: 100%;
-  }
-  
-  .mat-mdc-header-row {
-    background-color: rgb(213, 231, 231);
-    top: 0;
-  }
-  
-  tbody {
-    text-align: left;
-  }
-  
-  .mat-sort-header-arrow {
-    color: #1a1717;
-  }
-  
-  .mat-mdc-column {
-    border-right: 1px solid currentColor;
-  }
-  
-  .mat-column-Designation {
-    width: 32px;
-    border-right: 1px solid lightgray;
-    padding-right: 24px;
-  }
-  
-  .mat-column-Name {
-    border-right: 1px solid lightgray;
-  }
-  
-  .mat-column-SerialNum,
-  .mat-column-Name,
-  .mat-column-DateModified,
-  .mat-column-Type,
-  .mat-column-Size {
-    border-right: 1px solid lightgray;
-  }
-  
-  .header-container {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    height: 48px;
-    background-color: white;
-    top: 0;
-    overflow: hidden;
-    background-color: rgb(228, 231, 234);
-  }
-  
-  .header-text {
-    padding-left: 8px;
-    font-weight: 600;
-  }
-  
-  .add-hot-list {
-    cursor: pointer;
-  }
-  
-  .hot-list-actions {
-    display: flex;
-    align-items: center;
-    column-gap: 10px;
-    padding-right: 8px;
-  
-    .search {
-      height: 32px;
-      padding: 0px 8px;
-    }
-  }
-  
-  .hot-list-table-style {
-    width: 100%;
-    overflow: auto;
-    display: block;
-  }
-  
+
   .mdc-data-table__cell,
   .mdc-data-table__header-cell {
-    padding: 0 4px 0 4px;
+    padding: 0px 2px;
+    padding-left: 5rem;
   }
-  
-  .mat-mdc-header-row {
-    z-index: 1000;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+
+  .mdc-data-table__cell,
+  .mdc-data-table__header-cell {
+    padding: 0px 2px;
   }
-  
-  .no-data-found {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 1rem;
-    margin-top: 64px;
-  }
-  
-  .responsive-table {
-    width: 100%;
-  }
-  
-  @media screen and (max-width: 768px) {
-    .responsive-table {
-      table-layout: auto;
-    }
-  
-    .mdc-data-table__cell,
-    .mdc-data-table__header-cell {
-      padding: 0px 2px;
-      padding-left: 5rem;
-    }
-  }
-  
-  @media screen and (min-width: 768px) and (max-width: 1024px) {
-    .mdc-data-table__cell,
-    .mdc-data-table__header-cell {
-      padding: 0px 2px;
-    }
-  }
-  
-  .mat-mdc-header-row {
-    height: 30px !important;
-  }
-  
-  .mat-mdc-row {
-    height: 30px !important;
-  }
-  
-  .filter-button {
-    width: fit-content;
-    height: 25px;
-  }
-  
-  ul.breadcrumb li:last-child {
-    color: black;
-    pointer-events: none;
-  }
-  
-  .consultant-name a {
-    text-decoration: none;
-    color: #0d6efd;
-  }
-  
-  .bold-class  {
-    font-weight: bold;
-  }
-  .req-info {
-    cursor: pointer;
-    color: blue;
-  }
-  
-  .paginator {
-    margin-top: 10px;
-  }
-  
-  .action-button-ed {
-    color: red;
-  }
-  
-  ::ng-deep
-    .mat-mdc-paginator
-    .mat-mdc-button-persistent-ripple.mdc-icon-button__ripple {
-    height: 24px;
-    width: 24px;
-  }
-  
-  ::ng-deep .mat-mdc-paginator .mat-mdc-focus-indicator {
-    height: 24px;
-    width: 24px;
-  }
-  
-  ::ng-deep .mat-mdc-paginator .mat-mdc-icon-button .mat-mdc-button-touch-target {
-    height: 24px;
-    width: 24px;
-  }
-  
-  ::ng-deep
-    .mat-mdc-paginator
-    .mat-mdc-icon-button
-    mat-mdc-tooltip-trigger
-    mat-mdc-paginator-navigation-first
-    mdc-icon-button
-    mat-mdc-icon-button
-    mat-unthemed
-    mat-mdc-button-base
-    mat-mdc-tooltip-disabled
-    ng-star-inserted {
-    height: 24px;
-    width: 24px;
-  }
-  
-  ::ng-deep .mat-mdc-paginator .mat-mdc-icon-button .mat-mdc-button-base {
-    padding: 0px !important;
-    height: 24px;
-    width: 24px;
-  }
-  
-  ::ng-deep .mat-mdc-paginator .mat-mdc-icon-button {
-    padding: 0px !important;
-    height: 24px;
-    width: 24px;
-  }
-  
-  .action-buttons .mat-mdc-icon-button.mat-mdc-button-base {
-    --mdc-icon-button-state-layer-size: 24px;
-    width: var(--mdc-icon-button-state-layer-size);
-    height: var(--mdc-icon-button-state-layer-size);
-    padding: 0px !important;
-  }
-  
-  ::ng-deep .action-button-ed .mat-mdc-button-touch-target {
-    width: 24px !important;
-    height: 24px !important;
-  }
-  
-  ::ng-deep .action-button-ed .mat-mdc-focus-indicator {
-    width: 24px !important;
-    height: 24px !important;
-  }
-  
-  .truncate-multiline {
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 2;
-    line-clamp: 2;
-    max-height: 3.6em;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
-  
-  .email-count {
-    color: #007bff;
-    font-weight: bold;
-    cursor: pointer;
-  }
-  
-  .subject-text {
-    display: block;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    max-width: 100%;
-    cursor: pointer;
-  }
-  
-  .edit-icon {
-    color: rgb(99, 98, 98);
-  }
+}
+
+.mat-mdc-header-row {
+  height: 30px !important;
+}
+
+.mat-mdc-row {
+  height: 30px !important;
+}
+
+.filter-button {
+  width: fit-content;
+  height: 25px;
+}
+
+ul.breadcrumb li:last-child {
+  color: black;
+  pointer-events: none;
+}
+
+.consultant-name a {
+  text-decoration: none;
+  color: #0d6efd;
+}
+
+.bold-class {
+  font-weight: bold;
+}
+
+.req-info {
+  cursor: pointer;
+  color: blue;
+}
+
+.paginator {
+  margin-top: 10px;
+}
+
+.action-button-ed {
+  color: red;
+}
+
+::ng-deep .mat-mdc-paginator .mat-mdc-button-persistent-ripple.mdc-icon-button__ripple {
+  height: 24px;
+  width: 24px;
+}
+
+::ng-deep .mat-mdc-paginator .mat-mdc-focus-indicator {
+  height: 24px;
+  width: 24px;
+}
+
+::ng-deep .mat-mdc-paginator .mat-mdc-icon-button .mat-mdc-button-touch-target {
+  height: 24px;
+  width: 24px;
+}
+
+::ng-deep .mat-mdc-paginator .mat-mdc-icon-button mat-mdc-tooltip-trigger mat-mdc-paginator-navigation-first mdc-icon-button mat-mdc-icon-button mat-unthemed mat-mdc-button-base mat-mdc-tooltip-disabled ng-star-inserted {
+  height: 24px;
+  width: 24px;
+}
+
+::ng-deep .mat-mdc-paginator .mat-mdc-icon-button .mat-mdc-button-base {
+  padding: 0px !important;
+  height: 24px;
+  width: 24px;
+}
+
+::ng-deep .mat-mdc-paginator .mat-mdc-icon-button {
+  padding: 0px !important;
+  height: 24px;
+  width: 24px;
+}
+
+.action-buttons .mat-mdc-icon-button.mat-mdc-button-base {
+  --mdc-icon-button-state-layer-size: 24px;
+  width: var(--mdc-icon-button-state-layer-size);
+  height: var(--mdc-icon-button-state-layer-size);
+  padding: 0px !important;
+}
+
+::ng-deep .action-button-ed .mat-mdc-button-touch-target {
+  width: 24px !important;
+  height: 24px !important;
+}
+
+::ng-deep .action-button-ed .mat-mdc-focus-indicator {
+  width: 24px !important;
+  height: 24px !important;
+}
+
+.truncate-multiline {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  line-clamp: 2;
+  max-height: 3.6em;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.email-count {
+  color: #007bff;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.subject-text {
+  display: block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 100%;
+  cursor: pointer;
+}
+
+.edit-icon {
+  color: rgb(99, 98, 98);
+}
+
+.breadcrumb {
+  padding: 0px 8px;
+}
+
+.breadcrumb {
+  display: inline-flex;
+  align-items: center;
+  font-size: 14px;
+  font-family: Arial, sans-serif;
+  color: #555;
+}
+
+.breadcrumb-link {
+  color: #007bff;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.breadcrumb-link:hover {
+  text-decoration: underline;
+}
+
+.breadcrumb-active {
+  color: #4787ff;
+  font-weight: bold;
+}
+
+.breadcrumb a,
+.breadcrumb span {
+  margin: 0 5px;
+}
+
+.breadcrumb a::after {
+  margin: 0 5px;
+}
