--- a/src/app/usit/components/email-extraction/email-extraction.component.html
+++ b/src/app/usit/components/email-extraction/email-extraction.component.html
@@ -41,10 +41,10 @@
             <button *ngIf="showDeleteButton" mat-icon-button color="warn" (click)="bulkDelete()">
                 <mat-icon>delete</mat-icon>
             </button>
-            <button mat-raised-button color="primary" class="add-email" (click)="extractEmails()"
+            <!-- <button mat-raised-button color="primary" class="add-email" (click)="extractEmails()"
                 *ngIf="this.role !== 'Super Administrator'">
                 Extract Emails
-            </button>
+            </button> -->
             <div>
                 <mat-icon class="settings-icon" (click)="navigateBack()">settings</mat-icon>
             </div>
