--- a/src/app/usit/components/sales/consultant-list/consultant-list.component.scss
+++ b/src/app/usit/components/sales/consultant-list/consultant-list.component.scss
@@ -299,6 +299,14 @@ td.approve-buttons.cdk-cell.cdk-column-Approve-Reject.mat-column-Approve-Reject.
   color:#0275d8
 }
 
+.btn-spacing {
+  background-color: green !important;
+  color: white !important; /* Ensures text is readable */
+  margin-right: 10px;
+  padding: 10px 20px;
+}
+
+
 // @media screen and (min-width: 1920px) {
 //   .consultant-container {
 //     height: 90vh;
