--- a/src/app/usit/components/email-configuration/email-configuration.component.html
+++ b/src/app/usit/components/email-configuration/email-configuration.component.html
@@ -132,6 +132,10 @@
         Email Configuration
       </span>
       <div class="hot-list-actions">
+        <div>
+          <mat-icon class="report-icon"(click)="reportemail()">report</mat-icon> 
+
+      </div>
         <button mat-icon-button color="primary" class="add-email" matToolTip="Add" (click)="addEmail()">
           <mat-icon class="item-icon">add_circle</mat-icon>
         </button>
