--- a/src/app/usit/components/email-configuration/email-configuration.component.scss
+++ b/src/app/usit/components/email-configuration/email-configuration.component.scss
@@ -5,7 +5,16 @@
   height: calc(100vh - 68px);
   background-color: #edebeb;
 }
+.report-icon{
+  cursor: pointer;
+  font-size: 26px; /* Adjust size if needed */
+  color: #3f51b5; /* Change color if needed */
+  margin-right: 0px !important;
+}
+.report-icon:hover{
+  color: #3f51b5; /* Darker shade on hover */
 
+}
 mat-card {
   width: 400px;
   padding: 20px;
