--- a/src/app/usit/components/sales/interview-list/interview-list.component.html
+++ b/src/app/usit/components/sales/interview-list/interview-list.component.html
@@ -76,12 +76,7 @@
                     <td mat-cell *matCellDef="let element" nowrap>
                         {{element?.interview_date | date:'MM-dd-yyyy HH:mm'}} {{element?.time_zone}}</td>
                 </ng-container>
-                <!-- Track(S/I)-->
-                <ng-container matColumnDef="Round">
-                    <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Round" mat-sort-header> Round
-                    </th>
-                    <td mat-cell *matCellDef="let element">{{element?.round}} </td>
-                </ng-container>
+
                 <!-- Requirement-->
                 <ng-container matColumnDef="Mode">
                     <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Mode" mat-sort-header>
@@ -134,15 +129,25 @@
                                 (click)="goToUserInfo(element.userid)">{{element.pseudoname}}</span>
                         </ng-template>
                 </ng-container>
-
-                <!-- Interview Status Column -->
-                <ng-container matColumnDef="InterviewStatus">
-                    <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by InterviewStatus"
-                        mat-sort-header>
-                        Interview Status
+                <!-- Track(S/I)-->
+                <ng-container matColumnDef="Round">
+                    <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Round" mat-sort-header> Round
                     </th>
-                    <td mat-cell *matCellDef="let element"> {{element.interview_status}} </td>
+                    <td mat-cell *matCellDef="let element">{{element?.round}} </td>
                 </ng-container>
+                <!-- Interview Status Column -->
+           
+                  <ng-container matColumnDef="InterviewStatus">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by InterviewStatus">
+                      Interview Status
+                    </th>
+                    <td mat-cell *matCellDef="let element"
+                        [matTooltip]="feedbackData[element.intrid]"
+                        matTooltipPosition="above">
+                      {{ element.interview_status }}
+                    </td>
+                  </ng-container>
+                  
 
                 <!-- Action Column -->
                 <ng-container matColumnDef="Action">
