--- a/src/app/usit/components/sales/closure-list/closure-list.component.scss
+++ b/src/app/usit/components/sales/closure-list/closure-list.component.scss
@@ -98,6 +98,7 @@
   .mat-column-BillingCycle,
   .mat-column-PaymentCycle,
   .mat-column-ProjectStartDate,
+  .mat-column-ProjectEndDate,
   .mat-column-VendorArContact {
     border-right: 1px solid lightgray;
   }
