--- a/src/app/usit/components/sales/consultant-list/consultant-list.component.scss
+++ b/src/app/usit/components/sales/consultant-list/consultant-list.component.scss
@@ -91,6 +91,7 @@ tbody{
   .mat-column-Status,.mat-column-Email, .mat-column-ContactNumber,
   .mat-column-CurrentLocation,
   .mat-column-Priority,
+  .mat-column-AssignTo,
   .mat-column-AddedBy
 
   {
