--- a/src/app/usit/components/sales/hot-list/hot-list.component.scss
+++ b/src/app/usit/components/sales/hot-list/hot-list.component.scss
@@ -84,7 +84,8 @@
   .mat-column-CurrentLocation,
   .mat-column-Relocation,
   .mat-column-Phone,
-  .mat-column-Email {
+  .mat-column-Email,
+  .mat-column-AssignTo {
     border-right: 1px solid lightgray;
   }
   
