--- a/src/app/usit/components/email-configuration/email-configuration.component.html
+++ b/src/app/usit/components/email-configuration/email-configuration.component.html
@@ -2,6 +2,7 @@
   <div class="container">
     <mat-card>
       <mat-card-title class="title">{{ buttonText }} Email Configuration</mat-card-title>
+    
       <mat-card-content>
         <form [formGroup]="emailForm" autocomplete="off">
 
@@ -131,6 +132,10 @@
       <span class="header-text">
         Email Configuration
       </span>
+      <div class="back-button-container">
+        <button mat-raised-button color="primary" (click)="goBack()" >Back</button>
+      </div>
+     
       <div class="hot-list-actions">
         <button mat-icon-button color="primary" class="add-email" matToolTip="Add" (click)="addEmail()">
           <mat-icon class="item-icon">add_circle</mat-icon>
@@ -141,7 +146,9 @@
           <!-- (keyup)="applyFilter($event)" -->
         </div>
       </div>
+      
     </div>
+   
 
     <div id="table-container" class="table-wrapper">
       <section class="mat-elevation-z8 hot-list-table-style">
