--- a/src/app/usit/components/email-extraction/email-extraction.component.html
+++ b/src/app/usit/components/email-extraction/email-extraction.component.html
@@ -41,6 +41,11 @@
             <button *ngIf="showDeleteButton" mat-icon-button color="warn" (click)="bulkDelete()">
                 <mat-icon>delete</mat-icon>
             </button>
+
+            <button mat-icon-button (click)="refresh()">
+                <mat-icon>refresh</mat-icon>
+              </button>
+
             <!-- <button mat-raised-button color="primary" class="add-email" (click)="extractEmails()"
                 *ngIf="this.role !== 'Super Administrator'">
                 Extract Emails
