--- a/src/app/usit/components/sales/consultant-list/consultant-list.component.html
+++ b/src/app/usit/components/sales/consultant-list/consultant-list.component.html
@@ -49,7 +49,7 @@
           </ng-container>
         </div>
 
-        <button type="search" mat-raised-button color="accent" class="btn-spacing" (click)="handleExport()" *ngIf="privilegeServ.hasPrivilege('REQ_CON_EXPORT')">Export</button>
+        <button type="search" mat-raised-button color="accent" class="btn-spacing" (click)="handleExport()" *ngIf="flag === 'Recruiting' && privilegeServ.hasPrivilege('REQ_CON_EXPORT')">Export</button>
 
         <button type="search" mat-raised-button color="primary" (click)="refreshForm()"
           *ngIf="flag !== 'presales'">Refresh</button>
@@ -171,9 +171,9 @@
 
         <!-- Exp Column -->
         <ng-container matColumnDef="Experience">
-          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Experience" mat-sort-header style="width: 3%;"> Experience
+          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Experience" mat-sort-header style="width: 1%;"> Exp
           </th>
-          <td mat-cell *matCellDef="let element" class="text-align" style="width: 3%;"> {{element.experience}} </td>
+          <td mat-cell *matCellDef="let element" class="text-align" style="width: 1%;"> {{element.experience}} </td>
         </ng-container>
 
         <!-- Relocation Column -->
@@ -212,6 +212,14 @@
           <td mat-cell *matCellDef="let element"> {{element.priority}} </td>
         </ng-container>
 
+        <!-- Priority Column -->
+        <ng-container matColumnDef="AssignTo" *ngIf="(flag.toLocaleLowerCase() == 'sales')">
+          <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by AssignTo" mat-sort-header >Assign To </th>
+          <td mat-cell *matCellDef="let element"> {{element.assignto}} </td>
+        </ng-container>
+
+
+        
         <!-- Status Column -->
         <ng-container matColumnDef="Status">
           <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Status" mat-sort-header> Status </th>
