--- a/src/app/usit/components/sales/hot-list/hot-list.component.html
+++ b/src/app/usit/components/sales/hot-list/hot-list.component.html
@@ -157,6 +157,18 @@
                     </td>
                 </ng-container>
 
+
+                 <!-- AssignTo Column -->
+                 <ng-container matColumnDef="AssignTo">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by AssignTo">
+                        Assign To</th>
+                    <td mat-cell *matCellDef="let element"> {{element.assignto}}
+                    </td>
+                </ng-container>
+
+
+
+
                 <!-- table columns ends  -->
 
                 <!-- table ROW -->
