--- a/src/app/usit/components/sales/consultant-list/consultant-list.component.scss
+++ b/src/app/usit/components/sales/consultant-list/consultant-list.component.scss
@@ -363,3 +363,75 @@ td.approve-buttons.cdk-cell.cdk-column-Approve-Reject.mat-column-Approve-Reject.
   
 }
 
+::ng-deep .custom-mat-select .mat-form-field-wrapper {
+  padding: 0 !important;
+  margin: 0 !important;
+}
+
+::ng-deep .custom-mat-select .mat-form-field-outline {
+  display: none !important; /* Hide default underline */
+}
+
+::ng-deep .custom-mat-select .mat-form-field-infix {
+  padding: 4px 8px !important; /* Adjust padding to decrease height */
+  height: 30px !important; /* Reduce height to match normal input */
+  line-height: 30px;
+}
+
+::ng-deep .custom-mat-select .mat-select {
+  height: 30px !important; /* Match input height */
+  display: flex;
+  align-items: center;
+  padding: 0px 8px !important;
+  border: 1px solid black !important; /* Black border on all sides */
+  border-radius: 4px !important; /* Optional: rounded corners */
+  background-color: white;
+}
+
+/* Align mat-select trigger text */
+::ng-deep .mat-select-trigger {
+  height: 30px !important;
+  display: flex;
+  align-items: center;
+}
+
+/* Adjust dropdown options styling */
+::ng-deep .mat-option {
+  height: 30px !important;
+  display: flex;
+  align-items: center;
+}
+::ng-deep .mat-mdc-form-field.experience {
+  --mat-mdc-form-field-floating-label-scale: 0.75;
+  display: inline-flex;
+  flex-direction: column;
+  min-width: 0;
+  text-align: left;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  font-family: var(--mat-form-field-container-text-font);
+  line-height: var(--mat-form-field-container-text-line-height);
+  font-size: var(--mat-form-field-container-text-size);
+  letter-spacing: var(--mat-form-field-container-text-tracking);
+  font-weight: var(--mat-form-field-container-text-weight);
+  margin-top: 14px !important;
+  margin-right: 8px !important;
+}
+::ng-deep .mat-mdc-form-field.visa {
+  --mat-mdc-form-field-floating-label-scale: 0.75;
+  display: inline-flex;
+  flex-direction: column;
+  min-width: 0;
+  text-align: left;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  font-family: var(--mat-form-field-container-text-font);
+  line-height: var(--mat-form-field-container-text-line-height);
+  font-size: var(--mat-form-field-container-text-size);
+  letter-spacing: var(--mat-form-field-container-text-tracking);
+  font-weight: var(--mat-form-field-container-text-weight);
+  margin-left: 17px !important;
+}
+.consultant-actions {
+  
+}
